image wrap problem fixed

--- a/src/components/Header/TitleImage.css
+++ b/src/components/Header/TitleImage.css
@@ -1,10 +1,8 @@
 /* TitleImage.css */
 .title-image {
-    margin-top: 50px;
     display: flex;
-    flex-wrap: wrap;
     justify-content:space-between;
-    row-gap:30px;
+    gap:15px;
 }
 .title {
     color:#3B3C3C;
@@ -45,7 +43,9 @@
 }
 
 @media (max-width: 768px) {
-
+    .title-image{
+        flex-direction:column;
+    }
     .image {
         margin-top: 0px;
         flex-basis: 100%;
